Init Svelte app

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,14 @@
 
   <title>Soon&trade; &middot; Richard de Wit</title>
 
-  <link rel="stylesheet" href="/assets/css/dosis.css" />
-  <link rel="stylesheet" href="/assets/css/font-awesome.min.css" >
-  <link rel="stylesheet" href="/assets/css/style.css" >
+  <link rel="stylesheet" href="dosis.css" />
+  <link rel="stylesheet" href="font-awesome.min.css" >
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="bundle.css">
 </head>
 
 <body>
-  <main>
-    <h1>&nbsp;&nbsp;Soon&trade;</h1>
-    <p>Under Construction</p>
-  </main>
+  <main></main>
 
   <footer>
     <section>&copy; 2020 Richard de Wit</section>
@@ -31,7 +29,7 @@
             target="_blank"
             class="icon-link"
             title="Github - richarddewit"
-          >
+            >
             <i class="fa fa-fw fa-github"></i>
           </a>
         </li>
@@ -41,7 +39,7 @@
             target="_blank"
             class="icon-link"
             title="Twitter - @Sneetzle"
-          >
+            >
             <i class="fa fa-fw fa-twitter"></i>
           </a>
         </li>
@@ -51,7 +49,7 @@
             target="_blank"
             class="icon-link"
             title="Stack Overflow - Richard de Wit"
-          >
+            >
             <i class="fa fa-fw fa-stack-overflow"></i>
           </a>
         </li>
@@ -59,20 +57,7 @@
     </section>
   </footer>
 
-  <div id="particles"></div>
-  <script src="/assets/js/jparticles.js"></script>
-  <script src="/assets/js/particle.js"></script>
-  <script>
-    new JParticles.particle("#particles", {
-      color: ["#e86701", "#000"],
-      opacity: 0.6,
-      num: 0.08,
-      maxSpeed: 0.5,
-      minSpeed: 0.1,
-      range: 2000,
-      proximity: 50,
-    });
-  </script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
