--- a/index.html
+++ b/index.html
@@ -14,50 +14,10 @@
   <link rel="stylesheet" href="font-awesome.min.css" >
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="bundle.css">
+
+  <script defer src="bundle.js"></script>
 </head>
 
-<body>
-  <main></main>
-
-  <footer>
-    <section>&copy; 2020 Richard de Wit</section>
-    <section>
-      <ul class="list-inline">
-        <li>
-          <a
-            href="https://github.com/richarddewit"
-            target="_blank"
-            class="icon-link"
-            title="Github - richarddewit"
-            >
-            <i class="fa fa-fw fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://twitter.com/sneetzle"
-            target="_blank"
-            class="icon-link"
-            title="Twitter - @Sneetzle"
-            >
-            <i class="fa fa-fw fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://stackoverflow.com/users/1062281/richard-de-wit"
-            target="_blank"
-            class="icon-link"
-            title="Stack Overflow - Richard de Wit"
-            >
-            <i class="fa fa-fw fa-stack-overflow"></i>
-          </a>
-        </li>
-      </ul>
-    </section>
-  </footer>
-
-  <script src="bundle.js"></script>
-</body>
+<body></body>
 
 </html>
