--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <meta name="theme-color" content="#e86701">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
 
-  <title>Soon&trade; &middot; Richard de Wit</title>
+  <title>Richard de Wit &middot; Full &equiv; Developer</title>
 
   <link rel="stylesheet" href="dosis.css" />
   <link rel="stylesheet" href="font-awesome.min.css" >
-  <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="bundle.css">
 
   <script defer src="bundle.js"></script>
