Move js and css to assets folder

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
   <title>Richard de Wit &middot; Full &equiv; Developer</title>
 
-  <link rel="stylesheet" href="dosis.css" />
-  <link rel="stylesheet" href="font-awesome.min.css" >
-  <link rel="stylesheet" href="bundle.css">
+  <link rel="stylesheet" href="/assets/dosis.css" />
+  <link rel="stylesheet" href="/assets/font-awesome.min.css" >
+  <link rel="stylesheet" href="/assets/bundle.css">
 
-  <script defer src="bundle.js"></script>
+  <script defer src="/assets/bundle.js"></script>
 </head>
 
 <body></body>
